Change BIt API so that access is always done by batches, never by rows